--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape = "rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="10dp"/>
-            <stroke android:color = "#AEADB1" android:width="1dp"/>
+            <stroke android:color = "#CC6B49" android:width="1dp"/>
         </shape>
     </item>
 
@@ -12,7 +13,7 @@
         <shape android:shape = "rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="10dp"/>
-            <stroke android:color = "#8A8888" android:width="1dp"/>
+            <stroke android:color = "#C3C0C0" android:width="1dp"/>
         </shape>
     </item>
 </selector>
