--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,10 +13,13 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="72dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
         android:hint="Username"
         android:inputType="textPersonName"
         android:textColor="#000000"
         android:drawableStart="@drawable/ic_person"
+        android:drawablePadding="12dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -42,9 +45,11 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
         android:hint="Password"
         android:inputType="textPersonName"
         android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
