--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,9 +43,12 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="36dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
         android:hint="Password"
         android:inputType="textPersonName"
         android:textColor="#000000"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreateUsername" />
 
@@ -56,9 +59,12 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="36dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
         android:hint="Confirm Password"
         android:inputType="textPersonName"
         android:textColor="#000000"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreatePassword" />
 
@@ -69,9 +75,12 @@
         android:layout_marginStart="45dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
         android:hint="Username"
         android:inputType="textPersonName"
         android:textColor="#000000"
+        android:drawableStart="@drawable/ic_person"
+        android:drawablePadding="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
