Add date time picker for add new task page.

--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -44,8 +44,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="21dp"
+        android:clickable="false"
         android:ems="10"
-        android:inputType="datetime"
+        android:focusable="false"
+        android:password="false"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/taskDetails" />
 
@@ -55,8 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="65dp"
+        android:clickable="false"
         android:ems="10"
-        android:inputType="datetime"
+        android:focusable="false"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/taskStartTime" />
 
@@ -67,7 +70,6 @@
         android:layout_marginStart="58dp"
         android:layout_marginTop="95dp"
         android:ems="10"
-        android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,7 +80,6 @@
         android:layout_marginStart="46dp"
         android:layout_marginTop="9dp"
         android:ems="10"
-        android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
 
@@ -108,8 +109,10 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_addbutton"
-        tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="461dp" />
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="91dp"
+        app:layout_constraintStart_toEndOf="@+id/createTaskButton"
+        app:layout_constraintTop_toBottomOf="@+id/taskDeadline"
+        app:srcCompat="@drawable/ic_addbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
