Updated To-Do List Layout

--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -10,12 +10,12 @@
         android:id="@+id/createTaskButton"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="104dp"
         android:layout_marginTop="72dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="Create"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -32,6 +32,7 @@
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:focusable="false"
         android:hint="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
@@ -42,12 +43,13 @@
     <EditText
         android:id="@+id/taskDeadline"
         android:layout_width="320dp"
-        android:layout_height="52dp"
+        android:layout_height="53dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:focusable="false"
         android:hint="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
@@ -96,6 +98,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="195dp"
         android:text="Add New Task"
+        android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
