--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,15 @@
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="72dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:paddingLeft="8dp"
 
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -27,7 +28,7 @@
         android:id="@+id/newUserButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
@@ -44,12 +45,13 @@
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="32dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
-        android:hint="Password"
-        android:inputType="textPersonName"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPersonName"
+        android:paddingLeft="8dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
@@ -72,7 +74,7 @@
         android:id="@+id/loginButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
