--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
         android:id="@+id/createButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
@@ -25,7 +25,7 @@
         android:id="@+id/backButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
@@ -42,13 +42,14 @@
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="36dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
-        android:hint="Password"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPersonName"
+        android:paddingLeft="8dp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreateUsername" />
 
@@ -56,15 +57,16 @@
         android:id="@+id/editTextConfirmPassword"
         android:layout_width="321dp"
         android:layout_height="53dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="36dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
-        android:hint="Confirm Password"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Confirm Password"
+        android:inputType="textPersonName"
+        android:paddingLeft="8dp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreatePassword" />
 
@@ -72,15 +74,16 @@
         android:id="@+id/editTextCreateUsername"
         android:layout_width="321dp"
         android:layout_height="53dp"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="28dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:paddingLeft="8dp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
