--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -30,15 +30,16 @@
             android:layout_marginTop="45dp"
             android:background="@color/white"
             android:backgroundTint="@color/white"
-            android:buttonTint="@color/white" />
+            android:buttonTint="@color/white"
+            android:clickable="true" />
 
         <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-            android:layout_marginTop="45dp"
-            app:srcCompat="@android:drawable/ic_media_play" />
+            android:id="@+id/imageView10"
+            android:layout_width="79dp"
+            android:layout_height="88dp"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="15dp"
+            app:srcCompat="@drawable/ic_playarrow_foreground" />
 
     </RelativeLayout>
 </LinearLayout>
