--- a/app/src/main/res/layout/fragment_to_do_list_work.xml
+++ b/app/src/main/res/layout/fragment_to_do_list_work.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".toDoListWork">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,6 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/toDoListRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
