--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -39,7 +39,7 @@
         android:drawableEnd="@drawable/ic_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskDetails" />
+        app:layout_constraintTop_toBottomOf="@+id/editTaskDescription" />
 
     <EditText
         android:id="@+id/taskDeadline"
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/taskStartTime" />
 
     <EditText
-        android:id="@+id/taskTitle"
+        android:id="@+id/editTaskTitle"
         android:layout_width="320dp"
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/taskDetails"
+        android:id="@+id/editTaskDescription"
         android:layout_width="320dp"
         android:layout_height="100dp"
         android:layout_marginStart="44dp"
@@ -90,7 +90,7 @@
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/editTaskTitle" />
 
     <TextView
         android:id="@+id/textView4"
