--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -280,7 +280,7 @@
                 android:backgroundTint="#ece6c2">
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/profileButton"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_centerHorizontal="true"
@@ -293,7 +293,7 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/imageView6"
+                    android:layout_below="@id/profileButton"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="5dp"
@@ -316,7 +316,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/contactButton"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_centerHorizontal="true"
@@ -328,7 +328,7 @@
                     android:id="@+id/textView13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/imageView7"
+                    android:layout_below="@id/contactButton"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:text="Contact"
@@ -348,7 +348,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView8"
+                    android:id="@+id/faqButton"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_centerHorizontal="true"
@@ -361,7 +361,7 @@
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/imageView8"
+                    android:layout_below="@id/faqButton"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:text="FAQ"
@@ -381,7 +381,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/settingsButton"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_centerHorizontal="true"
@@ -394,7 +394,7 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/imageView9"
+                    android:layout_below="@id/settingsButton"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:text="Settings"
