--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,7 @@
         <item>@font/alata</item>
         <item>@font/baloo_tamma</item>
         <item>@font/calistoga</item>
+        <item>@font/oswald</item>
+        <item>@font/roboto</item>
     </array>
 </resources>
