--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="151dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/oswald"
         android:text="To Do List"
-        android:textSize="24sp"
+        android:textColor="#000000"
+        android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +26,10 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="88dp"
         android:background="#E1E3E5"
+        android:fontFamily="@font/roboto"
         android:text="Work"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +40,10 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="88dp"
         android:background="#E1E3E5"
+        android:fontFamily="@font/roboto"
         android:text="Personal"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/workFragmentButton"
         app:layout_constraintTop_toTopOf="parent" />
 
