--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".ToDOListEditTaskDetails">
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/oswald"
+        android:text="Edit Task "
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/goBack2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/goBack2"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
     <Button
         android:id="@+id/saveEditTaskButton"
         android:layout_width="200dp"
@@ -15,6 +38,7 @@
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
+        android:fontFamily="@font/roboto"
         android:padding="15dp"
         android:text="Save"
         android:textColor="#FFFFFF"
@@ -31,12 +55,13 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
+        android:drawableEnd="@drawable/ic_time"
         android:ems="10"
         android:focusable="false"
+        android:fontFamily="@font/roboto"
         android:hint="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
-        android:drawableEnd="@drawable/ic_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDescription" />
@@ -49,12 +74,13 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
+        android:drawableEnd="@drawable/ic_deadline"
         android:ems="10"
         android:focusable="false"
+        android:fontFamily="@font/roboto"
         android:hint="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
-        android:drawableEnd="@drawable/ic_deadline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskStartTime" />
@@ -64,17 +90,18 @@
         android:layout_width="320dp"
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="155dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editCurrentTaskDescription"
@@ -85,27 +112,12 @@
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Description"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskTitle" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="244dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="195dp"
-        android:text="Task Name"
-        android:textAlignment="center"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.229"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
