--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -96,4 +96,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
+
+    <Button
+        android:id="@+id/startStopTaskButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="173dp"
+        android:text="Start"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine" />
+
+    <Button
+        android:id="@+id/completeTaskButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="175dp"
+        android:text="Complete"
+        app:layout_constraintStart_toEndOf="@+id/startStopTaskButton"
+        app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine" />
+
+    <TextView
+        android:id="@+id/taskTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="101dp"
+        android:text="00:00:00"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine" />
 </androidx.constraintlayout.widget.ConstraintLayout>
