Add contact us layout. Updated fonts and colors.

--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
+        android:fontFamily="@font/roboto"
         android:padding="15dp"
         android:text="Create"
         android:textColor="#FFFFFF"
@@ -31,12 +32,13 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
+        android:drawableEnd="@drawable/ic_time"
         android:ems="10"
         android:focusable="false"
+        android:fontFamily="@font/roboto"
         android:hint="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
-        android:drawableEnd="@drawable/ic_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDescription" />
@@ -49,12 +51,13 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
+        android:drawableEnd="@drawable/ic_deadline"
         android:ems="10"
         android:focusable="false"
+        android:fontFamily="@font/roboto"
         android:hint="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
-        android:drawableEnd="@drawable/ic_deadline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskStartTime" />
@@ -68,6 +71,7 @@
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
@@ -85,6 +89,7 @@
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Description"
         android:inputType="textPersonName"
         android:padding="10dp"
@@ -99,8 +104,10 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="195dp"
+        android:fontFamily="@font/oswald"
         android:text="Add New Task"
         android:textAlignment="center"
+        android:textColor="#6F5642"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
