--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Username"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
@@ -46,6 +47,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Password"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
