--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/oswald"
         android:text="Edit Task "
-        android:textColor="#000000"
+        android:textColor="#6f5642"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/goBack2"
