--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,6 +51,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:ems="10"
+                android:fontFamily="@font/roboto"
                 android:inputType="textPersonName"
                 android:padding="10dp"
                 android:text="Username" />
@@ -63,6 +64,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:ems="10"
+                android:fontFamily="@font/roboto"
                 android:inputType="textPassword" />
 
         </RelativeLayout>
