--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -44,6 +44,7 @@
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Username"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
@@ -61,6 +62,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Password"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
@@ -78,6 +80,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Confirm Password"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
