--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -19,19 +19,9 @@
             android:layout_marginRight="50dp"
             android:background="@drawable/btn_circle"
             android:backgroundTint="#D2A24D"
+            android:fontFamily="@font/roboto"
             android:stateListAnimator="@null"
             android:text="Button" />
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="45dp"
-            android:background="@color/white"
-            android:backgroundTint="@color/white"
-            android:buttonTint="@color/white"
-            android:clickable="true" />
 
         <ImageView
             android:id="@+id/imageView10"
