--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:background="@null"
             android:onClick="previousMonthAction"
-            android:text="<"
+            android:drawableLeft="@drawable/ic_arrowleft"
             android:textColor="#6f5642"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -50,7 +50,7 @@
             android:layout_weight="1"
             android:background="@null"
             android:onClick="nextMonthAction"
-            android:text=">"
+            android:drawableRight="@drawable/ic_arrowright"
             android:textColor="#6f5642"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -132,9 +132,7 @@
             android:textColor="#888"
             android:textSize="16sp" />
 
-
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
