--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -7,7 +7,7 @@
     tools:context=".ToDoList">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/toDoListBackButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginStart="8dp"
