--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -16,7 +16,7 @@
         android:textColor="#6f5642"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/goBackHome"
+        app:layout_constraintStart_toEndOf="@+id/taskDetailBackButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -91,7 +91,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/goBackHome"
+        android:id="@+id/taskDetailBackButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginStart="8dp"
