--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -28,4 +28,16 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:fontFamily="@font/oswald"
+        android:text="Notes"
+        android:textColor="#6F5643"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="@+id/backHome"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
