--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".AddTaskPage">
 
+    <ImageView
+        android:id="@+id/backHome2"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
     <Button
         android:id="@+id/saveEditTaskButton"
         android:layout_width="200dp"
