--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,9 +11,20 @@
         android:layout_height="67dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="52dp"
-        android:background="#6f5642"
+        android:layout_marginEnd="16dp"
+        android:background="#D1D1D1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8">
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="39dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="320dp"
+            android:layout_marginTop="15dp"
+            app:srcCompat="@drawable/ic_arrowright" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/backHome"
@@ -37,13 +48,5 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/backHome"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_arrowright"
-        tools:layout_editor_absoluteX="330dp"
-        tools:layout_editor_absoluteY="164dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
